samples/_failures_safe/1761158301_0616f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5927bb19.c: In function ‘main’:
./samples/SAFE/__tmp_5927bb19.c:178:5: error: expected declaration or statement at end of input
  178 |     }
      |     ^
